Address review feedback on binary comparison and grouping