@@ -11,7 +11,6 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
@@ -887,7 +886,7 @@ public final class AggregateFunctions {
     private final int hash;
 
       GroupKey(List<Object> values) {
-        this.values = Collections.unmodifiableList(new ArrayList<>(values));
+        this.values = List.copyOf(values);
         this.hash = this.values.hashCode();
       }
 
